// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots should match snapshot with all skins 1`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 2`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 3`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 1rem;
  padding: 10px 18px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1.275rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 4`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 1.275rem;
  padding: 12px 20px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1.5rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 5`] = `
.c2 {
  margin-right: 6px;
}

.c3 .c1 {
  font-size: 1rem;
}

.c4 .c1 {
  font-size: 1.275rem;
}

.c5 .c1 {
  font-size: 1.5rem;
}

.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    <span
      aria-hidden="true"
      class="material-icons MuiIcon-root c1 c2"
    >
      face
    </span>
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 6`] = `
.c2 {
  margin-right: 6px;
}

.c3 .c1 {
  font-size: 1rem;
}

.c4 .c1 {
  font-size: 1.275rem;
}

.c5 .c1 {
  font-size: 1.5rem;
}

.c6 .c1 {
  font-size: 1rem;
}

.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 1rem;
  padding: 10px 18px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1.275rem;
}

<div>
  <button
    class="c0"
  >
    <span
      aria-hidden="true"
      class="material-icons MuiIcon-root c1 c2"
    >
      face
    </span>
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 7`] = `
.c2 {
  margin-right: 8px;
}

.c3 .c1 {
  font-size: 1rem;
}

.c4 .c1 {
  font-size: 1.275rem;
}

.c5 .c1 {
  font-size: 1.5rem;
}

.c6 .c1 {
  font-size: 1rem;
}

.c7 .c1 {
  font-size: 1.275rem;
}

.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 1.275rem;
  padding: 12px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1.5rem;
}

<div>
  <button
    class="c0"
  >
    <span
      aria-hidden="true"
      class="material-icons MuiIcon-root c1 c2"
    >
      face
    </span>
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 8`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
  width: 100%;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 9`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 10`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #25387f;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 11`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #50a47f;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 12`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #cd9447;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 13`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #f44336;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c0:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots should match snapshot with all skins 14`] = `
.c0 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #999;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
  background-color: #f2f2f2;
  color: #a8a8a8;
  cursor: not-allowed;
}

.c0 .c1 {
  font-size: 1rem;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    Button
  </button>
</div>
`;
